--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,6 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bd266e1a65.js" crossorigin="anonymous"></script>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/6.1.2/css/font-awesome.min.css" rel="stylesheet">
   </body>
 </html>
